fix: margin table, number of rows, add new product - to show in render, delete item - to show win with z-index , menu click

--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -1,8 +1,9 @@
 .tabs {
     display: flex;
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    //margin-left: auto;
+    //margin-right: auto;
+    margin-left:80px;
     background-color: #f5f5f5;
 
     &__item {
